Fixed CSS whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -1,267 +1,266 @@
-/* GRID OVERLAY */
-
-.overlay-grid {
-	visibility: hidden;
-	display: flex;
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 999;
-	/*visibility: hidden;*/
-	visibility: hidden;
-}
-
-.overlay-grid-unit {
-	height: 100%;
-	width: 100%;
-	border: 1px solid rgba(0, 0, 0, 0.04);
-}
-
-* {
-	box-sizing: border-box;
-}
-
-
-
-/* HEADER + NAV */
-
-.mini-header {
-	display: flex;
-	height: 1.4rem;
-	background: #778899;
-}
-
-.mini-header a {
-	margin-left: auto;
-	margin-right: 1rem;
-	padding: 0.1rem;
-	font-size: 0.9rem;
-	color: white;
-	text-decoration: none;
-}
-
-.header-nav {
-	display: flex;
-	background: #d3d3d3;
-}
-
-.header-nav a {
-	display: flex;
-	align-items: center;
-	color: white;
-	text-decoration: none;
-}
-
-.nav-logo {
-	flex: 4;
-	display: flex;
-	align-items: center;
-	margin-left: 5rem;;
-}
-
-.nav-logo-type {
-	padding-right: 1rem;
-}
-
-.nav-logo-img {
-	margin-right: 1rem;
-	background: #bcbcbc;;;
-}
-
-.nav-links {
-	margin-left: 5rem;
-	display: flex;
-	flex: 8 0 auto;
-}
-
-.nav-links a {
-	display: block;
-	background: #bcbcbc;
-	color: white;
-	text-decoration: none;;
-	padding: 1rem 1.5rem;
-}
-
-.nav-links a:hover {
-	background: #A9A9A9;
-}
-
-.text-link {
-  text-decoration: none;
-  color: #067fb3;
-}
-
-.footer-container {
-	display: flex;
-	justify-content: center;
-	background: #778899;
-}
-
-.footer-nav {
-	width: 90%;
-	display: flex;
-	justify-content: flex-start;
-}
-
-.footer-item {
-	flex: 1;
-	height: 15rem;
-	
-}
-
-/* https://www.jackreichert.com/2011/07/how-to-add-a-divider-between-menu-items-in-css-using-only-one-selector/  */
-
-/*.nav-links a ~ a {
-	border-left: 1px solid white;  
-}
-*/
-
-/* BANNER */
-
-.banner {
-	position: relative;
-}
-
-.banner-img  {;;
-	height: 400px;;;
-	width: 100%;;
-}
-
-.banner-text {
-	position: absolute;
-	top: 5rem;
-	left: 5rem;
-	background: #c0c0c0;
-	width: 22rem;;
-}
-
-.banner-text h1 {
-	padding: 1rem 3rem;
-}
-
-.banner-button {
-	position: absolute;
-	right: 5rem;
-	bottom: 3rem;
-	padding: 0.75rem 1rem;
-	background: white;
-}
-
-
-
-/* FONT + TYPE STYLING */
-
-.em {
-	font-weight: bold;
-}
-
-
-/* MAIN CONTENT */
-
-.wrapper-container {
-	display: flex;
-	justify-content: center;
-}
-
-.main-wrapper {
-	background: #dcdcdc;
-	padding: 4rem 5rem;
-	display: flex;
-	flex-direction: column;
-	margin: 0 calc(100% / 6);
-	/*width: 1240px;*/
-}
-
-section {
-	margin-bottom: 2rem;
-}
-
-.section-bees {
-	justify-content: center;
-	display: flex;
-	margin-right: -2rem;;
-}
-
-.content-bees-img {
-	height: 200px;
-}
-
-.content-bees-description {
-	padding: 0 2rem;
-}
-
-
-.section-care {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.section-care > h2 {
-	flex: 0 0 100%;
-}
-
-.content-care-img {
-	background: #A9A9A9;
-	margin-right: 2rem;
-}
-
-.col2 {
-	flex: 1;
-}
-
-.col2 ~ .col2 {
-	flex: 2;
-}
-
-.col3 {
-	text-align: center;
-	border-radius: 0.3rem;
-	background: #D3D3D3;
-	flex: 1 1 0;
-	padding: 2rem 0;
-	margin-right: 2rem;
-	margin-bottom: 2rem;
-}
-
-/* MEDIA QUERY + RESPONSIVE */
-
-@media (max-width: 1248px) {
-	.main-wrapper {
-		margin: 0 auto;
-	}
-
-	.section-bees {
-	flex-wrap: wrap;
-	}
-
-	.col3 {;
-	flex: 0 1 350px;;;
-	}
-
-	.col3:last-child {
-		flex: 0 1 350px;
-	}
-}
-
-@media (max-width: 780px) {
-	.header-nav {
-		flex-wrap: wrap;
-		flex-direction: column;
-	}
-
-	.nav-logo {
-		margin-left: 0;
-		width: 100%;
-	}
-
-	.nav-links {
-		margin-left: 0;
-		width: 100%;
-	}
-
-	.nav-links a {
-		flex: 1;
-	}
+/* GRID OVERLAY */
+
+
+
+.overlay-grid {
+	visibility: hidden;
+	display: flex;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 999;
+	/*visibility: hidden;*/
+	visibility: hidden;
+}
+
+.overlay-grid-unit {
+	height: 100%;
+	width: 100%;
+	border: 1px solid rgba(0, 0, 0, 0.04);
+}
+
+* {
+	box-sizing: border-box;
+}
+
+
+
+/* HEADER + NAV */
+
+.mini-header {
+	display: flex;
+	height: 1.4rem;
+	background: #778899;
+}
+
+.mini-header a {
+	margin-left: auto;
+	margin-right: 1rem;
+	padding: 0.1rem;
+	font-size: 0.9rem;
+	color: white;
+	text-decoration: none;
+}
+
+.header-nav {
+	display: flex;
+	background: #d3d3d3;
+}
+
+.header-nav a {
+	display: flex;
+	align-items: center;
+	color: white;
+	text-decoration: none;
+}
+
+.nav-logo {
+	flex: 4;
+	display: flex;
+	align-items: center;
+	margin-left: 5rem;;
+}
+
+.nav-logo-type {
+	padding-right: 1rem;
+}
+
+.nav-logo-img {
+	margin-right: 1rem;
+	background: #bcbcbc;;;
+}
+
+.nav-links {
+	margin-left: 5rem;
+	display: flex;
+	flex: 8 0 auto;
+}
+
+.nav-links a {
+	display: block;
+	background: #bcbcbc;
+	color: white;
+	text-decoration: none;;
+	padding: 1rem 1.5rem;
+}
+
+.nav-links a:hover {
+	background: #A9A9A9;
+}
+
+.text-link {
+  text-decoration: none;
+  color: #067fb3;
+}
+
+.footer-container {
+	display: flex;
+	justify-content: center;
+	background: #778899;
+}
+
+.footer-nav {
+	width: 90%;
+	display: flex;
+	justify-content: flex-start;
+}
+
+.footer-item {
+	flex: 1;
+	height: 15rem;
+}
+
+
+
+/* BANNER */
+
+.banner {
+	position: relative;
+}
+
+.banner-img  {;;
+	height: 400px;;;
+	width: 100%;;
+}
+
+.banner-text {
+	position: absolute;
+	top: 5rem;
+	left: 5rem;
+	background: #c0c0c0;
+	width: 22rem;;
+}
+
+.banner-text h1 {
+	padding: 1rem 3rem;
+}
+
+.banner-button {
+	position: absolute;
+	right: 5rem;
+	bottom: 3rem;
+	padding: 0.75rem 1rem;
+	background: white;
+}
+
+
+
+/* FONT + TYPE STYLING */
+
+.em {
+	font-weight: bold;
+}
+
+
+
+/* MAIN CONTENT */
+
+.wrapper-container {
+	display: flex;
+	justify-content: center;
+}
+
+.main-wrapper {
+	background: #dcdcdc;
+	padding: 4rem 5rem;
+	display: flex;
+	flex-direction: column;
+	margin: 0 calc(100% / 6);
+	/*width: 1240px;*/
+}
+
+section {
+	margin-bottom: 2rem;
+}
+
+.section-bees {
+	justify-content: center;
+	display: flex;
+	margin-right: -2rem;;
+}
+
+.content-bees-img {
+	height: 200px;
+}
+
+.content-bees-description {
+	padding: 0 2rem;
+}
+
+.section-care {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.section-care > h2 {
+	flex: 0 0 100%;
+}
+
+.content-care-img {
+	background: #A9A9A9;
+	margin-right: 2rem;
+}
+
+.col2 {
+	flex: 1;
+}
+
+.col2 ~ .col2 {
+	flex: 2;
+}
+
+.col3 {
+	text-align: center;
+	border-radius: 0.3rem;
+	background: #D3D3D3;
+	flex: 1 1 0;
+	padding: 2rem 0;
+	margin-right: 2rem;
+	margin-bottom: 2rem;
+}
+
+
+
+/* MEDIA QUERY + RESPONSIVE */
+
+@media (max-width: 1248px) {
+	.main-wrapper {
+		margin: 0 auto;
+	}
+
+	.section-bees {
+	flex-wrap: wrap;
+	}
+
+	.col3 {
+	flex: 0 1 350px;
+	}
+
+	.col3:last-child {
+		flex: 0 1 350px;
+	}
+}
+
+
+@media (max-width: 780px) {
+	.header-nav {
+		flex-wrap: wrap;
+		flex-direction: column;
+	}
+
+	.nav-logo {
+		margin-left: 0;
+		width: 100%;
+	}
+
+	.nav-links {
+		margin-left: 0;
+		width: 100%;
+	}
+
+	.nav-links a {
+		flex: 1;
+	}
 }
